# rust-vault

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pipeline.yml  publish.yaml
examples/: helloworld.rs
src/: config.rs  lib.rs  mod.rs  service.rs  test.rs  vault_config.rs  vault_service.rs
src/auth/: kubernetes.rs  method.rs  mod.rs  token.rs
src/errors/: error.rs
src/vault/: authenticate_vault.rs  mod.rs  test.rs  vault_config.rs  vault_params.rs  vault_service.rs
src/vault/authenticate_vault/: authenticate_vault_trait.rs  kubernetes.rs  mod.rs  token.rs
