[package]
name = "valensas-vault"
version = "0.2.3"
edition = "2021"
description = "A library that provides a convenient interface for interacting with Vault"
license = "MIT"
repository = "https://github.com/Valensas/rust-vault"

[dependencies]
serde = "1.0.164"
serde_json = "1.0.96"
vaultrs = "0.7.0"
vaultrs-login = "0.1.7"
tokio = { version = "1", features = ["full"] }
log = "0.4"
futures = { version = "0.3", features = ["compat"] }
async-trait = "0.1.70"
duration-string = "0.3.0"
base64 = "0.21.2"

[[example]]
name = "helloworld"